- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.5.0 Beta
 - 
    None
 
- 
        cbf28577ef49b6f5b5e45ae2e74143969cbd9327
 
Executables compiled with a 5.5 installed through the offline installer cannot run because they do not find the platform plugin:
QFactoryLoader::QFactoryLoader() checking directory path "/home/kakoehne/Qt5.5.0/5.5/gcc_64/platforms" ... QFactoryLoader::QFactoryLoader() checking directory path "/home/kakoehne/dev/tmp/build-widgetsapp-Desktop_Qt_5_5_0_GCC_64bit-Debug/platforms" ... This application failed to start because it could not find or load the Qt platform plugin "xcb".
Indeed the path returned from QLibraryInfo::location seems corrupted:
qDebug() << QLibraryInfo::location(QLibraryInfo::PluginsPath);
returns
"/home/kakoehne/Qt5.5.0/5.5/gcc_64\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000/plugins"
- is required for
 - 
                    
QTBUG-44653 Issues to be fixed before Qt 5.5 Beta
-         
 - Closed
 
 -